# niffler-py-st3

python-tests/: .env.sample  README.md  config.ini  conftest.py  marks.py  pyproject.toml
python-tests/clients/: api_client.py  auth_client.py  category_client.py  spend_client.py
python-tests/config/: config.py  config_provider.py
python-tests/models/: category_get_response.py  spend_create_request.py  spend_create_response.py  spend_delete_response.py
python-tests/pages/: base_page.py  login_page.py  main_page.py  people_page.py  profile_page.py
python-tests/pages/components/: archive_dialog.py  delete_dialog.py  header.py  logout_dialog.py  profile_menu.py
python-tests/pages/spending/: add_spending_page.py  edit_spending_page.py  spending_form_page.py
python-tests/session/: base_session.py
python-tests/tests/: conftest.py  test_auth.py  test_category.py  test_login.py  test_profile.py  test_spend.py
