[tool.poetry]
name = "python-tests"
version = "0.1.0"
description = "Niffler python tests"
authors = ["avartemova <avartemova@mts.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pytest = "^8.4.0"
playwright = ">=1.53.0,<2.0.0"
pytest-playwright = "^0.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"