[tool.poetry]
package-mode = false
name = "python-tests"
version = "0.1.0"
description = "Niffler python tests"
authors = ["avartemova <avartemova@mts.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pytest = "^8.4.0"
playwright = ">=1.53.0,<2.0.0"
pytest-playwright = "^0.7.0"
python-dotenv = "^1.1.1"
curlify = "^3.0.0"
pydantic = "^2.11.7"

[tool.ruff]
select = ["E", "F"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"